# RayGay

./: .cvsignore  .gitignore  .travis.yml  AUTHORS  Doxyfile  Makefile.am  README  README-MPI  README.md  TODO  TRICKS.md  animation-render.sh  animator.pl  autogen.sh  build-docs.scm  config.h.in  configure.ac  configure.in  feed.cgi  generate.rb  index.cgi  layout-daily.html  layout-monthly.html  layout.html  library.cgi  library.xml  remote-render.sh  style.css  sync.sh  test.sh
docs/: 3DS.spec  MLI.spec  Makefile.am  Quadratic bezier ray intersection.tex  REAL_IOR.txt  colors.f90  reference.css  reference.docbook  reference.html
docs/examples/: torus-knot.scm
src/: .cvsignore  .gitignore  3ds.cpp  3ds.h  Makefile.am  aabox.cpp  aabox.h  allocator.cpp  allocator.h  arealight.cpp  arealight.h  bench-main.cpp  bezierpatch.cpp  bezierpatch.h  boolean.cpp  boolean.h  booleanoperand.h  boundingbox.cpp  boundingbox.h  box.cpp  box.h  boxobject.cpp  boxobject.h  bsp.cpp  bsp.h  camera.cpp  camera.h  circle.cpp  circle.h  constants.h  conv.sh  cylinder.cpp  cylinder.h  docs.h  edgekey.h  environment.cpp  environment.h  exception.cpp  exception.h  extrusion.cpp  (+117 more)
src/brdf/: ashikhmin_shirley.h  brdf.h  lafortune.h  lambert.h  schlick.h  shirley.h  ward_anisotropic.h
src/cameras/: Makefile.am  camera.cpp  camera.h  fisheye.cpp  fisheye.h  latlong.cpp  latlong.h  pinhole.cpp  pinhole.h
src/collections/: Makefile.am  bucket_map.h  caseinsensitive_map.h  flat3_map.h  lru_hash.h  vectorlist.cpp  vectorlist.h
src/color/: Lab.h  XYZ.h
src/filters/: Makefile.am  colormatrix.cpp  colormatrix.h  depthoffield.cpp  depthoffield.h  filter.cpp  filter.h  filterstack.cpp  filterstack.h  gaussian.h  gaussianblur.cpp  gaussianblur.h  grayscale.cpp  grayscale.h  matrixfilter.cpp  matrixfilter.h  sepia.cpp  sepia.h  specularbloom.cpp  specularbloom.h
src/http/: Makefile.am  httpclient.cpp  httpclient.h  httpcommon.cpp  httpcommon.h  httpserver.cpp  httpserver.h  imageresponse.cpp  imageresponse.h  md5.c  md5.h  webserver.h
src/image/: .cvsignore  Makefile.am  image.cpp  image.h  imagedrawing.cpp  imagedrawing.h  imageimpl.h  imageio.cpp  imageio.h  imageio_darwin.cpp  imageio_darwin.h  imageio_hdri.cpp  imageio_hdri.h  imageio_jpeg.cpp  imageio_jpeg.h  imageio_png.cpp  imageio_png.h  imageio_tga.cpp  imageio_tga.h  jpeg.cpp  jpeg.h  multitexture.cpp  multitexture.h  png.cpp  pngio.cpp  rgb.cpp  rgb.h  rgba.cpp  rgba.h  simpletexture.cpp  simpletexture.h  texture.cpp  texture.h  tga.cpp  tga.h
src/imagefilters/: Makefile.am  colormatrix.cpp  colormatrix.h  depthoffield.cpp  depthoffield.h  filterstack.cpp  filterstack.h  gaussianblur.cpp  gaussianblur.h  grayscale.cpp  grayscale.h  imagefilter.cpp  imagefilter.h  matrixfilter.cpp  matrixfilter.h  sepia.cpp  sepia.h  specularbloom.cpp  specularbloom.h
src/lights/: Makefile.am  arealight.cpp  arealight.h  lightinfo.h  lightsource.cpp  lightsource.h  pointlight.cpp  pointlight.h  shadowcache.cpp  shadowcache.h  skylight.cpp  skylight.h  spotlight.cpp  spotlight.h
src/materials/: Makefile.am  checker.cpp  checker.h  marble.cpp  marble.h  material.cpp  material.h  materials.h  perlin.cpp  perlin.h  plastic.cpp  plastic.h  wood.cpp  wood.h
src/math/: Makefile.am  constants.h  contour.cpp  contour.h  function.h  functions.cpp  functions.h  halton.cpp  halton.h  interval.cpp  interval.h  matrix.cpp  matrix.h  matrix3.cpp  matrix3.h  mersennetwister.cpp  mersennetwister.h  physics.cpp  physics.h  poisson_disc.cpp  poisson_disc.h  polynomial.cpp  polynomial.h  qmcsequence.h  quaternion.cpp  quaternion.h  rng.h  rootfinder.cpp  rootfinder.h  sturmsequence.cpp  sturmsequence.h  testmath.cpp  vector.cpp  vector.h  vector2.cpp  vector2.h
src/objects/: 3ds.cpp  3ds.h  Makefile.am  bezierpatch.cpp  bezierpatch.h  blob.cpp  blob.h  boolean.cpp  boolean.h  booleanoperand.cpp  booleanoperand.h  bound.cpp  bound.h  box.cpp  box.h  cone.cpp  cone.h  csg.cpp  csg.h  csg_union.cpp  cylinder.cpp  cylinder.h  ellipsoid.cpp  ellipsoid.h  extrusion.cpp  extrusion.h  halfspace.cpp  halfspace.h  heightfield.cpp  heightfield.h  isosurface.cpp  isosurface.h  julia.cpp  julia.h  marchingcubes.cpp  marchingcubes.h  mesh.cpp  mesh.h  necklace.cpp  necklace.h  (+47 more)
src/parser/: .cvsignore  Makefile.am  assignments.cpp  assignments.h  boolnodes.cpp  boolnodes.h  camerafactory.cpp  camerafactory.h  cameranode.cpp  cameranode.h  converters.cpp  converters.h  fileposition.cpp  fileposition.h  floatnodes.cpp  floatnodes.h  function.cpp  function.h  imagefactory.cpp  imagefactory.h  interpreterenv.cpp  interpreterenv.h  langnodes.cpp  langnodes.h  lightnodes.cpp  lightnodes.h  lightsourcefactory.cpp  lightsourcefactory.h  materialfactory.cpp  materialfactory.h  materialnodes.cpp  materialnodes.h  mathfactory.cpp  mathfactory.h  normalfactory.cpp  normalfactory.h  objectcollector.cpp  objectcollector.h  parser.cpp  parser.h  (+35 more)
src/paths/: Makefile.am  arc.cpp  arc.h  bezierspline.cpp  bezierspline.h  catmullromspline.cpp  catmullromspline.h  circle.cpp  circle.h  ellipse.cpp  ellipse.h  line.cpp  line.h  linesegment.cpp  linesegment.h  path.cpp  path.h  spiral.cpp  spiral.h  superellipse.cpp  superellipse.h
src/photon/: Makefile.am  causticsmap.cpp  causticsmap.h  genericphotonmap.cpp  genericphotonmap.h  globalphotonmap.cpp  globalphotonmap.h  irradiancecache.cpp  irradiancecache.h  photon.cpp  photon.h  photonmap.cpp  photonmap.h  photontracer.cpp  photontracer.h
src/samplers/: Makefile.am  boundary_adaptive.cpp  boundary_adaptive.h  halton_sampler.cpp  halton_sampler.h  non_aa_sampler.cpp  non_aa_sampler.h  sampler.cpp  sampler.h  uniform_jitter.cpp  uniform_jitter.h  whitted_adaptive.cpp  whitted_adaptive.h
src/scheme/: .cvsignore  Makefile.am  TODO  bigint.cpp  bigint.h  compiler.cpp  compiler.h  compiler.scm  (+46 more)
test/: .cvsignore  .gitignore  Makefile.am  main.cpp  myassert.cpp  testimage.cpp  testing.h  testlanguage.cpp  testmath.cpp  testobjects.cpp  testparser.cpp  testpaths.cpp  testspace.cpp  testspeed.cpp  testsphere.cpp  testsphere.h  teststats.cpp  testthreads.cpp
(+552 files in other folders)
