
AC_INIT(src/main.cpp)
AM_INIT_AUTOMAKE("RayGay",0.5)
AM_CONFIG_HEADER(config.h)    

dnl PACKAGE=tracer
dnl VERSION=0.1

dnl -------------------------------------------------
dnl Check that the compiler and programs exists
dnl -------------------------------------------------
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_LIBTOOL


dnl -------------------------------------------------
dnl Check system and headers
dnl -------------------------------------------------
AC_C_BIGENDIAN
AC_C_INLINE
AC_HEADER_TIME
AC_CHECK_HEADERS(pthread.h)
AC_CHECK_HEADERS(jpeglib.h)    
AC_CHECK_HEADERS(png.h)    


dnl -------------------------------------------------
dnl Check libraries needed
dnl -------------------------------------------------
LIBS="$LIBS -lm"    
AC_CHECK_LIB(m, sin,,[AC_MSG_ERROR([math library is not found])],)
AC_CHECK_LIB(pthread, pthread_create,LIBS="-lpthread $LIBS")
AC_CHECK_LIB(jpeg, jpeg_read_header,LIBS="-ljpeg $LIBS")
AC_CHECK_LIB(png, png_read_info, LIBS="-lpng $LIBS")

dnl -------------------------------------------------
dnl Add the CPU dependent compile optimizations
dnl -------------------------------------------------
CXXFLAGS="-g -O3 -Wall -ffast-math"     
case $target in
     pentium3) CXXFLAGS="$CXXFLAGS -malign-double -march=pentium3 -mfpmath=sse -ftracer -mno-ieee-fp -fstrict-aliasing";;
     pentium4) CXXFLAGS="$CXXFLAGS -malign-double -fomit-frame-pointer -march=pentium4 -mfpmath=sse -ftracer -mno-ieee-fp -fstrict-aliasing -msse2";;
     profile) CXXFLAGS="$CXXFLAGS -pg -malign-double -march=pentium3 -mfpmath=sse -ftracer -mno-ieee-fp -fstrict-aliasing"; LDFLAGS="-pg";
esac


#CXXFLAGS="-g -O3 -Wall -ffast-math -malign-double -fomit-frame-pointer -march=pentium4 -mfpmath=sse -ftracer -mno-ieee-fp -fstrict-aliasing"
#CXXFLAGS="-g -O3 -Wall -march=i686 -ffast-math"
#CXXFLAGS="$CXXFLAGS -O3 -Wall -march=i686 -ffast-math"
#CXXFLAGS="$CPPFLAGS -O4 -Wall -march=i686 -msse -mfpmath=sse"

AC_OUTPUT(Makefile \
	  src/Makefile \
	  src/materials/Makefile \
	  src/paths/Makefile \
	  src/lights/Makefile \
	  src/math/Makefile \
	  src/image/Makefile \
	  src/filters/Makefile \
	  src/photon/Makefile \
	  src/objects/Makefile \
	  src/space/Makefile \
	  src/shaders/Makefile \
	  test/Makefile)

echo "--------------------------------------------------------------"
echo "You can specify the target CPU to enable special optimizations"
echo "Example: ./configure --target=<cpu>"
echo
echo "Where <cpu> can be: pentium3, pentium4"
echo 
echo "--------------------------------------------------------------"

