
INCLUDES = -I$(top_srcdir)/src 

noinst_LIBRARIES = libfilters.a

libfilters_a_SOURCES = depthoffield.cpp grayscale.cpp filterstack.cpp specularbloom.cpp gaussianblur.cpp filter.cpp sepia.cpp

EXTRA_DIST = filter.h		\
	     filterstack.h	\
	     gaussianblur.h	\
	     grayscale.h	\
	     sepia.h		\
	     specularbloom.h	\
	     depthoffield.h
