
INCLUDES = -I$(top_srcdir)/src 

noinst_LTLIBRARIES = libfilters.la

libfilters_la_SOURCES = depthoffield.cpp grayscale.cpp filterstack.cpp specularbloom.cpp gaussianblur.cpp filter.cpp sepia.cpp

EXTRA_DIST = filter.h		\
	     filterstack.h	\
	     gaussianblur.h	\
	     grayscale.h	\
	     sepia.h		\
	     specularbloom.h	\
	     depthoffield.h
