
INCLUDES = -I$(top_srcdir)/src 

noinst_LTLIBRARIES = libimagefilters.la

libimagefilters_la_SOURCES = depthoffield.cpp grayscale.cpp filterstack.cpp specularbloom.cpp gaussianblur.cpp imagefilter.cpp sepia.cpp colormatrix.cpp matrixfilter.cpp

EXTRA_DIST = imagefilter.h		\
	     filterstack.h	\
	     gaussianblur.h	\
	     grayscale.h	\
	     matrixfilter.h	\
	     sepia.h		\
	     specularbloom.h	\
	     colormatrix.h	\
	     depthoffield.h
