
AM_CPPFLAGS = -I$(top_srcdir)/src 

noinst_LTLIBRARIES = liblights.la

liblights_la_SOURCES = arealight.cpp pointlight.cpp spotlight.cpp skylight.cpp lightsource.cpp shadowcache.cpp

EXTRA_DIST = arealight.h \
             pointlight.h \
	     lightsource.h \
	     lightinfo.h \
	     shadowcache.h	   \
	     skylight.h	   \
	     spotlight.h
