
INCLUDES = -I$(top_srcdir)/src 

noinst_LIBRARIES = libobjects.a

libobjects_a_SOURCES = 3ds.cpp 		\
                       bezierpatch.cpp 	\
		       blob.cpp		\
		       bound.cpp	\
		       bound.h		\
		       box.cpp		\
		       csg.cpp		\
		       cylinder.cpp	\
		       ellipsoid.cpp	\
		       extrusion.cpp	\
		       heightfield.cpp	\
		       isosurface.cpp	\
		       mesh.cpp		\
		       necklace.cpp	\
		       object.cpp	\
		       objectgroup.cpp	\
		       ply.cpp		\
		       solidbox.cpp	\
		       sor.cpp		\
		       sphere.cpp	\
		       teapot.cpp	\
		       tessalation.cpp	\
		       tetrahedron.cpp	\
		       torus.cpp	\
		       transformedinstance.cpp	\
		       transformer.cpp	\
		       triangle.cpp	\
		       wireframe.cpp

EXTRA_DIST = 3ds.h 		\
    	     bezierpatch.h	\
	     blob.h		\
	     bound.h		\
	     box.h		\
	     csg.h		\
	     cylinder.h		\
	     ellipsoid.h	\
	     extrusion.h	\
	     heightfield.h	\
	     isosurface.h	\
	     mesh.h		\
	     necklace.h		\
	     object.h		\
	     objectgroup.h	\
	     ply.h		\
	     sceneobject.h	\
	     solid.h		\
	     solidbox.h		\
	     sor.h		\
	     sphere.h		\
	     teapot.h		\
	     tessalation.h	\
	     tetrahedron.h	\
	     torus.h		\
	     transformedinstance.h	\
	     transformer.h	\
	     triangle.h 	\
	     wireframe.h

